# public

./: README.md  apt_basic.json  data.json  test.json  test.sh
bash/: README.md  deps.json  install_all.sh  install_infer.sh  install_llvm.sh  tst.sh  vscode.sh
libs/libtty/: CMakeLists.txt  libtty.h  main.cpp
tutorials/: wsl.md
